# adserv

./: CMakeLists.txt  adserv.c  adserv.conf  adserv.h  adserv_cfg.c  adserv_cfg.h  adserv_db.c  adserv_db.h  dbtool.py  insert_banner.py  installations.xml
